Added genotypes and alleles to called variants; fixed SV comparison for false positives; changed position for SV fields in GenomicVariantAnnotation.